@@ -67,6 +67,7 @@ Fixed bugs
 - correct dual solution values for bound constraints
 - fixed recognition of variable with only one lock in cons_bivariate, cons_quadratic, and cons_nonlinear
 - fixed update of constraint violations in solution repair in cons_bivariate, cons_quadratic, and cons_nonlinear
+- print error message and terminate if matrix entries of a column are not consecutive in mps format
 
 Miscellaneous
 -------------
